--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -5,7 +5,8 @@
 - Для p тега: Зробіть колір заливки тексту червоним
 - Для button тега: Зробіть штрихи тексту в 1px з кольором #000
 
-Увага!!! Звертайте увагу на те, що є клас "task_1", використовуйте його як Селектор нащадка для тегів , щоб у вас все
+Увага!!! Звертайте увагу на те, що є клас "task_1", використовуйте його як 
+Селектор нащадка для тегів , щоб у вас все
  коректно працювало
 -->
 
@@ -27,7 +28,8 @@
 
 - Для h1 тега: Змініть напрям тексту на "rtl" (справа наліво).
 - Для p тега: Змініть вирівнювання тексту на праворуч
-- Для button тега: Змініть регістр тексту кнопки, використовуючи властивість регістра тексту.
+- Для button тега: Змініть регістр тексту кнопки,
+використовуючи властивість регістра тексту.
 
 Увага!!! Звертайте увагу на те, що є клас "task_2", використовуйте його як Селектор нащадка для тегів, щоб у вас все
 коректно працювало.
@@ -48,11 +50,14 @@
 
 Завдання №3.
 
-- Для h1 тега: Зробіть текст вертикальним, використовуючи властивість орієнтації тексту.
-- Для pre тега: Застосуйте властивість ширини табуляції і змініть розмір табуляції на 4.
+- Для h1 тега: Зробіть текст вертикальним, використовуючи властивість 
+орієнтації тексту.
+- Для pre тега: Застосуйте властивість ширини табуляції і змініть 
+розмір табуляції на 4.
 - Для button тега:
 1) Збільште проміжок між літерами на 2px для тексту кнопки.
-2) Застосуйте властивість декорації тексту до тексту кнопки, зробіть його підкресленим
+2) Застосуйте властивість декорації тексту до тексту кнопки, зробіть
+ його підкресленим
 
 Увага!!! Звертайте увагу на те, що є клас "task_3", використовуйте його як Селектор нащадка для тегів, щоб у вас все
 коректно працювало.
@@ -282,12 +287,16 @@
 
 
 - Для тега h1:
-    1) Встановіть значення властивості, яке не дозволяє словам переноситися на новий рядок, якщо вони не поміщаються в один рядок.
+    1) Встановіть значення властивості, яке не дозволяє словам 
+	переноситися на новий рядок, якщо вони не поміщаються в 
+	один рядок.
     2) Збільшити відстань між словами на 30px.
 - Для тега div:
     1) Зробіть перенесення слова за допомогою символу (&shy;).
 - Для тега p:
-    1) Встановіть значення властивості, яке дозволяє словам переноситися на новий рядок, якщо вони не поміщаються в один рядок, і розділяти їх по буквах;
+    1) Встановіть значення властивості, яке дозволяє
+	 словам переноситися на новий рядок, якщо вони не 
+	 поміщаються в один рядок, і розділяти їх по буквах;
 - Для тега textarea:
     1) Сховайте змінювання розміру елемента за допомогою миші.
 
