--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -87,9 +87,11 @@
 	2) Змініть стиль шрифту на "italic".
 
 - Для p тега:
-    1) Під'єднайте шрифт 'Open Sans' (Bold 700) з Google Fonts в проєкт. (підключайте через тег <link> в default.hbs)
+    1) Під'єднайте шрифт 'Open Sans' (Bold 700) з Google Fonts в проєкт.
+	(підключайте через тег <link> в default.hbs)
     2) Змініть шрифт на 'Open Sans'.
-    3) Зробіть прогрузку шрифту так, щоб Браузер повинен замінити на більш схожий шрифт до того моменту,
+    3) Зробіть прогрузку шрифту так, щоб Браузер повинен
+	 замінити на більш схожий шрифт до того моменту,
      поки заданий шрифт не буде завантажений.(swap)
 	4) Зробіть шрифт жирним (700)
 
