--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -128,7 +128,8 @@
 
 - Для тега button:
 1) Зробіть внутрішні та зовнішні відступи по 10px.
-2) Застосуйте властивість розмір коробки, щоб розміри кнопки включав лише його вміст, не враховуючи внутрішні відступи.
+2) Застосуйте властивість розмір коробки, щоб розміри кнопки включав лише його вміст
+, не враховуючи внутрішні відступи.
 
 - Для тега input:
 1) Зробіть мінімальну ширину 150px.
@@ -167,7 +168,8 @@
 
 - Для тега button:
 1) Зробіть радіус закруглення рамки 25px.
-2) Задайте тінь тексту на елементі зі зміщенням вправо на 2px, вниз на 2px, розмиття 10px та колір тіні #888888.
+2) Задайте тінь тексту на елементі зі зміщенням вправо на 2px, вниз на 2px,
+ розмиття 10px та колір тіні #888888.
 
 -->
 
@@ -188,7 +190,8 @@
 Завдання № 7.
 
 - Для тега button:
-1) Зробіть тінь блоку зі зміщенням вправо на 2px, вниз на 2px, розмиванням 5px, поширення 10px та кольором #666666.
+1) Зробіть тінь блоку зі зміщенням вправо на 2px, вниз на 2px,
+ розмиванням 5px, поширення 10px та кольором #666666.
 2) Зробіть висоту рядка елементу зі значенням 2.
 
 - Для тега strong:
