--- a/public/css/index.css
+++ b/public/css/index.css
@@ -47,3 +47,53 @@
   font-display: swap;
   font-weight: 700;
 }
+
+.task_5 div {
+  margin: 10px;
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+.task_5 button {
+  padding: 10px;
+  margin: 10px;
+  box-sizing: content-box;
+
+}
+
+.task_5 input {
+  min-width: 150px;
+  max-width: 300px;
+  min-height: 45px;
+  max-height: 60px;
+  background-color: gray;
+}
+
+.task_5 p {
+  display: none;
+}
+
+.task_6 h1 {
+  outline: 3px double blue;
+  outline-offset: 10px;
+}
+
+.task_6 div {
+  border: 3px dashed red;
+}
+
+.task_6 button {
+  border-radius: 25px;
+  box-shadow: 2px 2px 10px #888;
+}
+
+.task_7 button {
+  box-shadow: 2px 2px 5px 10px #666;
+  line-height: 2;
+}
+
+.task_7>p>strong {
+  vertical-align: top;
+  cursor: wait;
+}
