--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -227,7 +227,8 @@
  1) Зробіть максимальну висоту 50px.
  2) Зробіть обрізання блоку, якщо контент елемента не вміщується;
  3) Забороніть перенесення рядків.(nowrap)
- 4) Зробіть так, щоб текст, який не поміщається в елемент, з'являвся в кінці з трьома крапками;
+ 4) Зробіть так, щоб текст, який не поміщається в елемент, 
+ з'являвся в кінці з трьома крапками;
 
 -->
 
